[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "SCORE:  0"

[node name="Message" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER  :("
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
